--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,7 +84,7 @@ bind -n C-v split-window -h -c "#{pane_current_path}"
 
 # sでペインを横に分割する
 bind s split-window -v -c "#{pane_current_path}"
-bind -n C-s split-window -v -c "#{pane_current_path}"
+# bind -n C-s split-window -v -c "#{pane_current_path}"
 
 # Vimのキーバインドでペインを移動する
 # bind h select-pane -L
