--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -83,9 +83,10 @@
 	ui = auto
 [core]
 	excludesfile = /Users/a13596/.gitignore
-	autocrlf = input # CRLFを自動変換
+	autocrlf = false
 	; editor = emacs
 	editor = vim -c \"set fenc=utf-8\"
+	quotepath = false
 [merge]
 	tool = vimdiff
 	; http://qiita.com/yaotti/items/2361768b6ed781e87780
@@ -98,7 +99,9 @@
 	path = .gitconfig.local
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
+	path = 
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[i18n]
+	commitencoding = utf-8
