--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,7 +59,9 @@ set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane: #P"
 
 ## 右パネルを設定する
-set -g status-right "#[fg=magenta][%Y-%m-%d(%a) %H:%M]"
+# set -g status-right "Mem: #(used-mem) #[fg=magenta][%Y-%m-%d(%a) %H:%M]"
+set -g status-right "#[fg=magenta][Mem: #(used-mem)]"
+
 
 # prefixキーをC-aに変更する
 set -g prefix C-t
@@ -91,8 +93,10 @@ bind s split-window -v -c "#{pane_current_path}"
 # bind j select-pane -D
 # bind k select-pane -U
 # bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
+bind -n C-h next-window
+bind -n C-l previous-window
 
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
 # 行頭に"bind -n"をつけるとPrefixが不要になる。
