--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9286,7 +9286,7 @@
 		<key>0xf702-0x300000</key>
 		<dict>
 			<key>Action</key>
-			<integer>2</integer>
+			<integer>3</integer>
 			<key>Text</key>
 			<string></string>
 		</dict>
@@ -9300,7 +9300,7 @@
 		<key>0xf703-0x300000</key>
 		<dict>
 			<key>Action</key>
-			<integer>0</integer>
+			<integer>1</integer>
 			<key>Text</key>
 			<string></string>
 		</dict>
@@ -9393,36 +9393,21 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSTableView Columns KeyBingingTable</key>
-	<array>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATCG
-		</data>
-		<string>198</string>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATGG
-		</data>
-		<string>302</string>
-	</array>
-	<key>NSTableView Hidden Columns KeyBingingTable</key>
-	<array/>
-	<key>NSTableView Sort Ordering KeyBingingTable</key>
-	<array/>
-	<key>NSWindow Frame NSColorPanel</key>
-	<string>1167 272 201 309 0 0 1920 1058 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>675 471 924 485 0 0 1920 1058 </string>
+	<string>0 285 924 485 0 0 1280 778 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>665 324 625 726 0 0 1920 1058 </string>
+	<string>655 63 625 712 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>79 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9446,137 +9431,137 @@
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.30588236451148987</real>
 				<key>Red Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.83529412746429443</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.29019609093666077</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.7921568751335144</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.72549021244049072</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.27843138575553894</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.77254903316497803</real>
 				<key>Red Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.90588235855102539</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.85490196943283081</real>
 				<key>Green Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.65098041296005249</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.47843137383460999</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.84705883264541626</real>
 				<key>Green Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.59215688705444336</real>
 				<key>Red Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.76470589637756348</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.69411766529083252</real>
 				<key>Green Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.75294119119644165</real>
 				<key>Red Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.29019609093666077</real>
 				<key>Green Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.7921568751335144</real>
 				<key>Red Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.72549021244049072</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.27843138575553894</real>
 				<key>Green Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.77254903316497803</real>
 				<key>Red Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.90588235855102539</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.85490196943283081</real>
 				<key>Green Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.65098041296005249</real>
 				<key>Red Component</key>
 				<real>0.47843137383460999</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.84705883264541626</real>
 				<key>Green Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.59215688705444336</real>
 				<key>Red Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.76470589637756348</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.69411766529083252</real>
 				<key>Green Component</key>
-				<real>0.72156864404678345</real>
+				<real>0.75294119119644165</real>
 				<key>Red Component</key>
-				<real>0.47843137383460999</real>
+				<real>0.43921568989753723</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.99999129772186279</real>
 				<key>Green Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.99997437000274658</real>
 				<key>Red Component</key>
-				<real>0.85098040103912354</real>
+				<real>1</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.0</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.32549020648002625</real>
 				<key>Green Component</key>
-				<real>0.74117648601531982</real>
+				<real>0.30588236451148987</real>
 				<key>Red Component</key>
-				<real>0.85882353782653809</real>
+				<real>0.83529412746429443</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9585,11 +9570,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.098039217293262482</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.050980392843484879</real>
+				<real>0.0</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9608,11 +9593,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.91648769378662109</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.91671288013458252</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.91654461622238159</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9625,20 +9610,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.91648769378662109</real>
 				<key>Green Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.91671288013458252</real>
 				<key>Red Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.91654461622238159</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.14901961386203766</real>
+				<real>0.0</real>
 				<key>Green Component</key>
-				<real>0.098039217293262482</real>
+				<real>0.0</real>
 				<key>Red Component</key>
-				<real>0.050980392843484879</real>
+				<real>0.0</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9659,11 +9644,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.94901961088180542</real>
+				<real>0.91648769378662109</real>
 				<key>Green Component</key>
-				<real>0.90196079015731812</real>
+				<real>0.91671288013458252</real>
 				<key>Red Component</key>
-				<real>0.85098040103912354</real>
+				<real>0.91654461622238159</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -9674,7 +9659,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string></string>
+			<string>tmux</string>
 			<key>Jobs to Ignore</key>
 			<array>
 				<string>rlogin</string>
@@ -10019,20 +10004,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.91648769378662109</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.91671288013458252</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.91654461622238159</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.019607843831181526</real>
+				<real>0.26020613312721252</real>
 				<key>Green Component</key>
-				<real>0.22352941334247589</real>
+				<real>0.26027005910873413</real>
 				<key>Red Component</key>
-				<real>0.031372550874948502</real>
+				<real>0.26022228598594666</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10956,7 +10941,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/SettingFiles/mac/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10974,7 +10959,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-09-18T02:04:40Z</date>
+	<date>2014-10-19T13:09:38Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -11029,6 +11014,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.0</string>
+	<string>1.0.0.20140629</string>
 </dict>
 </plist>
