ショートカット等変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,7 +82,7 @@ bind C-t send-prefix
 # vでペインを縦に分割する
 bind v split-window -h -c "#{pane_current_path}"
 unbind C-v
-bind -n C-v split-window -h -c "#{pane_current_path}"
+# bind -n C-v split-window -h -c "#{pane_current_path}"
 
 # sでペインを横に分割する
 bind s split-window -v -c "#{pane_current_path}"
@@ -131,7 +131,6 @@ bind i display-panes
 bind -n C-Space copy-mode
 # ペースト
 bind p paste-buffer
-bind -n C-y paste-buffer
 
 # マウス操作を有効にする
 # これを有効にすると、MacでCommand+Cなどができなくなるが、Optionを押しながら範囲選択すると、コピーできる。
@@ -158,15 +157,15 @@ bind -n C-y run 'tmux copy-mode\;' send-keys z\; display "1 line copied."
 # コピーモードを設定する
 ## viのキーバインドを使用する
 # setw -g mode-keys vi
-set-window-option -g mode-keys emacs
+set-window-option -g mode-keys vi
 # http://superuser.com/questions/397076/tmux-exits-with-exited-on-mac-os-x
 ## クリップボード共有を有効にする
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t emacs-copy v begin-selection
-bind-key -t emacs-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t emacs-copy Enter copy-selection
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-selection
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
