--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -29,6 +29,7 @@
 	rb = rebase
 	st = stash
 	bl = blame
+	cl = clone
 
 	; http://qiita.com/peccul/items/90dd469e2f72babbc106
 	today = log --oneline --since='12 hour ago'
