refs 顔文字等を追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,8 +95,8 @@ bind s split-window -v -c "#{pane_current_path}"
 # bind l select-pane -R
 # bind -r C-h select-window -t :-
 # bind -r C-l select-window -t :+
-bind -n C-h next-window
-bind -n C-l previous-window
+bind -n C-l next-window
+bind -n C-h previous-window
 
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
 # 行頭に"bind -n"をつけるとPrefixが不要になる。
