--- a/.jshintrc
+++ b/.jshintrc
@@ -31,7 +31,7 @@
   "regexp":         false,    //not found. // Prohibit `.` and `[^...]` in regular expressions.
   "undef":          true,     //prohibits the use of explicitly undeclared variables.
   "unused":         true,     //warns when you define and never use your variables.
-  "strict":         true,     //requires all functions to run in ECMAScript 5's strict mode.
+  "strict":         false,    //requires all functions to run in ECMAScript 5's strict mode.
   "trailing":       true,     //makes it an error to leave a trailing whitespace in your code.
   "maxparams":      false,    //lets you set the max number of formal parameters allowed per function
   "maxdepth":       false,    //lets you control how nested do you want your blocks to be
