--- a/.tmux.conf
+++ b/.tmux.conf
@@ -167,5 +167,7 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -t vi-copy Enter copy-selection
+bind-key -t vi-copy u halfpage-up
+bind-key -t vi-copy d halfpage-down
 # unbind -t vi-copy Enter
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
