--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane
 set -g status-right "#[fg=magenta][Mem: #(used-mem)]"
 
 
-# prefixキーをC-aに変更する
+# prefixキーをC-tに変更する
 set -g prefix C-t
 
 # C-bのキーバインドを解除する
@@ -81,7 +81,7 @@ bind C-t send-prefix
 
 # vでペインを縦に分割する
 bind v split-window -h -c "#{pane_current_path}"
-unbind C-v
+# unbind C-v
 # bind -n C-v split-window -h -c "#{pane_current_path}"
 
 # sでペインを横に分割する
@@ -89,15 +89,10 @@ bind s split-window -v -c "#{pane_current_path}"
 # bind -n C-s split-window -v -c "#{pane_current_path}"
 
 # Vimのキーバインドでペインを移動する
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
 # bind -r C-h select-window -t :-
 # bind -r C-l select-window -t :+
-bind -n C-l next-window
-bind -n C-h previous-window
-
+# bind -n C-l next-window
+# bind -n C-h previous-window
 
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
 # 行頭に"bind -n"をつけるとPrefixが不要になる。
@@ -105,6 +100,10 @@ bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 bind -n S-right select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Vimのキーバインドでペインをリサイズする
 bind -r H resize-pane -L 5
@@ -114,8 +113,6 @@ bind -r L resize-pane -R 5
 
 # ウィンドウ選択画面
 bind Space choose-window
-# 新ウィンドウ作成
-# bind c new-window
 # 分割していたペインそれぞれをWindowに
 bind b break-pane
 
@@ -123,15 +120,16 @@ bind w kill-window
 bind q kill-session
 
 # ペイン終了
-bind k kill-pane
+# bind k kill-pane
+bind x kill-pane
 # ウィンドウ終了
-bind K kill-window
+# bind K kill-window
 # ペイン番号表示
 bind i display-panes
 # コピーモード突入
 bind -n C-Space copy-mode
 # ペースト
-bind p paste-buffer
+bind y paste-buffer
 
 # マウス操作を有効にする
 # これを有効にすると、MacでCommand+Cなどができなくなるが、Optionを押しながら範囲選択すると、コピーできる。
