--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -4,19 +4,11 @@
 <array>
 	<dict>
 		<key>phrase</key>
-		<string> (◞‸◟)</string>
+		<string> 人ゝω・)</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>_(._.)_</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1414395039</integer>
+		<integer>1417965742</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -24,7 +16,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1401292018</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -32,7 +24,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1390383349</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -40,7 +32,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885655</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -48,7 +40,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414391932</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -56,15 +48,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885682</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(￣ー￣)</string>
+		<string>(￣ー￣)ﾆﾔﾘｯ</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622686</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -72,7 +64,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885835</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -80,7 +72,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1390739356</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -88,7 +80,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1397922258</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -96,7 +88,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1411542397</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -104,15 +96,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>((((( ；ﾟДﾟ)))))</string>
+		<string>((((( ；ﾟДﾟ)))))ｶﾞｸｶﾞｸﾌﾞﾙﾌﾞﾙ</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622691</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -120,7 +112,23 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1393986630</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(*･ω･*)ﾎﾟｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1414431833</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(*&gt;▽&lt;*)ゞ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1417965711</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -128,23 +136,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(｀･ω･´)ゞ</string>
+		<string>(´・ω・)ｶﾜｲｿｽ</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1415086785</integer>
-	</dict>
-	<dict>
-		<key>phrase</key>
-		<string>(´・ω・)</string>
-		<key>shortcut</key>
-		<string>かおもじ</string>
-		<key>timestamp</key>
-		<integer>1408622696</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -152,7 +152,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128386</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -160,7 +160,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128449</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -168,7 +168,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885787</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -176,7 +176,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622718</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -184,7 +184,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -192,7 +192,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -200,15 +200,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414387198</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(´Д｀)</string>
+		<string>(´Д｀)ﾊｧ…</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622708</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -216,7 +216,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885691</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -224,7 +224,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885669</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -232,7 +232,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885825</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -240,7 +240,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -248,7 +248,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128409</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -256,7 +256,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1414382864</integer>
+		<integer>1414431833</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>|дﾟ)ﾁﾗｯ</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1404229056</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -264,7 +272,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1397922240</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -272,7 +280,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1395423089</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -280,7 +288,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -288,7 +296,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -296,7 +304,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1411542385</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -304,7 +312,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1392128398</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -312,15 +320,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885717</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>v(￣∇￣)</string>
+		<string>v(￣∇￣)ﾆﾔｯ</string>
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622713</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -328,7 +336,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1408622648</integer>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -336,7 +344,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885775</integer>
+		<integer>1414431833</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -344,7 +352,15 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1413885806</integer>
+		<integer>1414431833</integer>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>ﾊｱｰｧ(´･д･)-з</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+		<key>timestamp</key>
+		<integer>1403280313</integer>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -352,7 +368,7 @@
 		<key>shortcut</key>
 		<string>かおもじ</string>
 		<key>timestamp</key>
-		<integer>1411542408</integer>
+		<integer>1414431833</integer>
 	</dict>
 </array>
 </plist>
