Advent calendarを参考に色々追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,6 +62,9 @@ set -g status-left "#[fg=green]Session: #S #[fg=yellow]Window: #I #[fg=cyan]Pane
 # set -g status-right "Mem: #(used-mem) #[fg=magenta][%Y-%m-%d(%a) %H:%M]"
 set -g status-right "#[fg=magenta][Mem: #(used-mem)]"
 
+# ウィンドウ名が実行中のコマンド名になるのを止める
+# setw -g automatic-rename off
+
 
 # prefixキーをC-tに変更する
 set -g prefix C-t
@@ -91,8 +94,8 @@ bind s split-window -v -c "#{pane_current_path}"
 # Vimのキーバインドでペインを移動する
 # bind -r C-h select-window -t :-
 # bind -r C-l select-window -t :+
-# bind -n C-l next-window
-# bind -n C-h previous-window
+# bind -n C-. next-window
+# bind -n C-, previous-window
 
 # Shift + 上下左右でペインを移動できるようにする。(＜Prefix＞不要)
 # 行頭に"bind -n"をつけるとPrefixが不要になる。
@@ -138,6 +141,8 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 
+# UTF8 Support
+setw -g utf8 on
 ## ステータスバーのUTF-8サポートを有効にする
 set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
@@ -150,8 +155,10 @@ set -g visual-activity on
 
 # 一行コピー
 # http://mba-hack.blogspot.jp/2014/03/tmux11.html
-bind -t vi-copy z copy-line
-bind -n C-y run 'tmux copy-mode\;' send-keys z\; display "1 line copied."
+# bind -t vi-copy z copy-line
+# bind -n C-y run 'tmux copy-mode\;' send-keys z\; display "1 line copied."
+bind -t vi-copy z select-line
+bind -n C-y run 'tmux copy-mode\;' send-keys z y Enter\; display "1 line copied."
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
